--- a/src/CadpazBundle/Resources/views/Caso/view.html.twig
+++ b/src/CadpazBundle/Resources/views/Caso/view.html.twig
@@ -4,9 +4,11 @@
         
         <strong>Atendimentos</strong>
         <div id="new_atendimento_area"></div>
+        {% if is_granted('ROLE_EDITOR') %}
         {% image '@CadpazBundle/Resources/public/images/button_add2.png' %}
         <a id="newAtendimentoLink" href="{{ path('atendimento_new', {'caso_id':caso.id}) }}"><img src="{{ asset_url }}" alt="Example" /></a><br />
         {% endimage %}
+        {% endif %}
         <div id="atendimentos_area">
         {% for atendimento in caso.atendimentos %}
             <hr>
@@ -39,5 +41,5 @@
                             }
                         });
         });
-        // 
+        //
     </script>
