--- a/web/bundles/cadpaz/css/geral.css
+++ b/web/bundles/cadpaz/css/geral.css
@@ -535,4 +535,9 @@ textarea {
 
 .trlink {
     text-decoration: none;
+    color: #000;
+}
+.trlink:visited{
+    text-decoration: none;
+    color: #000;
 }
