--- a/src/CadpazBundle/Resources/views/Pessoa/index.html.twig
+++ b/src/CadpazBundle/Resources/views/Pessoa/index.html.twig
@@ -341,6 +341,8 @@
             if (searchText.length < 5)
                 return;
 
+                window.searchText = searchText;
+
             $.ajax({
                 url: Routing.generate('pessoa_busca'),
                 data: {'nome':searchText},
@@ -359,10 +361,10 @@
                 success: function(responseText, statusText, xhr, $form) {
                     $("#userAreaEdit").html(responseText);
                     $('#userAreaEdit').bPopup({
-                    speed: 650,
-                    transition: 'slideIn',
-                    transitionClose: 'slideBack',
-                });
+                        speed: 650,
+                        transition: 'slideIn',
+                        transitionClose: 'slideBack',
+                    });
                     
                     $(".fos_user_profile_edit").ajaxForm({
                         type:'post',
