--- a/src/CadpazBundle/Resources/public/css/geral.css
+++ b/src/CadpazBundle/Resources/public/css/geral.css
@@ -522,7 +522,13 @@ body.loading .modal {
 
 
 .questionario_secao {
-    border: 1px dotted;
+    /*border: 1px dotted;*/
+    border-bottom: 1px solid;
+}
+
+.telefone_endereco_secao {
+    /*border: 1px dotted;*/
+    border-top: 1px solid;
 }
 
 
