--- a/src/CadpazBundle/Resources/views/Relatorios/encaminhamentos.html.twig
+++ b/src/CadpazBundle/Resources/views/Relatorios/encaminhamentos.html.twig
@@ -3,9 +3,12 @@
     {{ chart(chart) }}
 </script>
 
+<div style="text-align: center"><h3>Encaminhamentos</h3></div>
+<div class="spacer"></div>
+<div style="clear: both"></div>
 
 <div style="float: left; width: 30%">
-Encaminhamentos:<br>
+{#Encaminhamentos:<br>#}
 <table id="tbl_enc" class="display compact">
     <thead class="tabela_pequena">
         <tr>
